--- a/index.html
+++ b/index.html
@@ -14,6 +14,187 @@
     <title>Fungi Finders</title>
   </head>
   <body>
-    <h1>Fungi Finders</h1>
+    <header class="site-header">
+      <div class="wrapper">
+        <a href="/">
+          <img
+            class="logo"
+            src="/assets/fungi-finders.svg"
+            alt="Fungi Finders"
+          />
+        </a>
+
+        <nav class="primary-navigation">
+          <ul>
+            <li><a href="/">Discover</a></li>
+            <li><a href="mushroom-guide.html">Mushroom guide</a></li>
+            <li><a href="mushroom-guide.html#faq">FAQ</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="wrapper">
+          <h1>
+            Discover the World of
+            <span>Mushroom Foraging</span>
+          </h1>
+
+          <p>
+            Mushroom foraging is the art and science of identifying and
+            collecting wild mushrooms.
+          </p>
+          <p>
+            It's a practice that combines outdoor exploration botanical
+            knowledge, and culinary adventure. Foragers venture into forests,
+            fields, and even urban green spaces to discover these hidden
+            treasures.
+          </p>
+          <p>
+            But beware - this hobby requires careful study and respect for
+            nature, as some mushrooms can be dangerous if misidentified.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="wrapper">
+          <h2>The joys of mushroom foraging</h2>
+          <p>
+            Foraging for mushrooms can be a rewarding experience for many
+            reasons. People may venture off into the woods to forage for
+            mushrooms because it allows them to connect with nature, enjoy the
+            thrill of the hunt, and savor the satisfaction of finding a hidden
+            culinary treasure.
+          </p>
+          <!-- 3 columns -->
+          <div class="cards">
+            <!-- card 1 -->
+            <div class="card">
+              <img
+                src="./assets/outdoor-exploration.webp"
+                alt="Tighly grouped brown mushrooms growing up the side of a mossy tree trunk"
+              />
+              <h3>Outdoor Exploration</h3>
+              <p>
+                Mushroom foraging takes you off the beaten path and into the
+                heart of nature. Learn to read the landscape, identifying prime
+                mushroom habitats from lush forest floors to sun-dappled
+                meadows. Every expedition is a new adventure, with the potential
+                for exciting discoveries around every tree and under every log.
+              </p>
+            </div>
+            <!-- card 2 -->
+            <div class="card">
+              <img
+                src="./assets/botanical-expertise.webp"
+                alt="Various harvested wild mushrooms on a table"
+              />
+              <h3>Botanical Expertise</h3>
+              <p>
+                Dive into the intricate world of fungal biology. Discover the
+                unique structures of mushrooms, from caps to gills to spores.
+                Learn to use field guides and identification keys to distinguish
+                between species. With practice, you'll start to see the forest
+                in a whole new light, recognizing the vital role fungi play in
+                ecosystem health.
+              </p>
+            </div>
+            <!-- card 3 -->
+            <div class="card">
+              <img
+                src="./assets/culinary-delight.webp"
+                alt="A freshly cooked plate of food, still steaming, with several mushroom slices on it"
+              />
+              <h3>Culinary Delights</h3>
+              <p>
+                Transform your foraged finds into delectable dishes. Many edible
+                mushrooms offer unique flavors and textures that can elevate
+                your cooking. From the earthy porcini to the delicate
+                chanterelle, each variety brings its own character to the table.
+                Explore recipes, preservation techniques, and the joy of cooking
+                with nature's bounty.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="wrapper">
+          <h2>Start your <span> Foraging Adventure!</span></h2>
+          <p>
+            Whether you're seeking a deeper connection with nature, a new
+            outdoor hobby, or simply love the idea of finding your own food,
+            mushroom foraging offers a uniquely rewarding experience.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <!-- two columns -->
+        <div class="wrapper">
+          <div>
+            <div>
+              <img
+                src="./assets/get-to-know.webp"
+                alt="A man on his hands and knees carefully digging a mushroom out of the forest floor"
+              />
+            </div>
+            <div>
+              <h2>Get to know your mushrooms</h2>
+              <p>
+                Successful and safe mushroom foraging begins with a deep
+                understanding of the species you'll encounter in the wild - not
+                just what the edible ones look like, but their toxic
+                look-alikes, seasonal patterns, and preferred habitats.
+              </p>
+              <p>
+                It can feel like a big task, but we've got a handy reference
+                guide to help you out!
+              </p>
+              <a class="button" href="/mushroom-guide.html"
+                ><span class="visually-hidden"
+                  >Get to know your mushrooms by using our handy
+                </span>
+                Reference Guide</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <!-- two columns -->
+        <div class="wrapper">
+          <div>
+            <div>
+              <h2>Connect with Nature</h2>
+              <p>
+                Experience the beauty of the great outdoors while foraging for
+                mushrooms with fellow enthusiasts.
+              </p>
+              <a href="#" class="button">
+                Learn more
+                <span class="visually-hidden">
+                  about mushrooms with our helpful reference guide
+                </span>
+              </a>
+            </div>
+            <div>
+              <img
+                src="./assets/nature.webp"
+                alt="A few small yellowish mushrooms growing on a mossy forest floor"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="site-footer">
+      <p>Happy Foraging!</p>
+      <a href="mailto:contact@fungifinders.com">contact@fungifinders.com</a>
+    </footer>
   </body>
 </html>
