--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
               alt="Fungi Finders"
             />
           </a>
-
-          <nav class="primary-navigation">
+          <button aria-controls="primary-nav" aria-expanded="false">
+            <span class="visually-hidden">Menu</span>
+            <img src="./assets/hamburger.svg" alt="" />
+          </button>
+          <nav id="primary-nav" class="primary-navigation">
             <ul role="list">
               <li><a href="/">Discover</a></li>
               <li><a href="mushroom-guide.html">Mushroom guide</a></li>
