ADDED: functionality to hamburger Menu ✅

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="icon" href="./assets/fungi-finders.svg" />
+    <script src="./script.js" defer></script>
     <title>Fungi Finders</title>
   </head>
   <body>
