ADDED: Skip to main link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Fungi Finders</title>
   </head>
   <body>
+    <a class="skip-to-main" href="#main-content">Skip To Main</a>
     <header class="site-header">
       <div class="wrapper" data-width="wide">
         <div class="site-header__inner">
@@ -39,7 +40,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main id="main-content">
       <section class="hero section flow" data-padding="compact">
         <div class="wrapper">
           <h1 class="hero__title">
