nav link modified.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <nav id="primary-nav" class="primary-navigation">
             <ul role="list">
               <li><a href="/">Discover</a></li>
-              <li><a href="mushroom-guide.html">Mushroom guide</a></li>
-              <li><a href="mushroom-guide.html#faq">FAQ</a></li>
+              <li><a href="./mushroom-guide.html">Mushroom guide</a></li>
+              <li><a href="./mushroom-guide.html#faq">FAQ</a></li>
             </ul>
           </nav>
         </div>
