Implement filter functionality by season and type for Mushroom Guide
- Added filtering options for season and mushroom type
- Display message when no matches are found

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -90,13 +90,13 @@
         <div class="wrapper flow">
           <h2 class="section-title">Get to know your mushrooms</h2>
           <div class="flex-group">
-            <select id="season">
+            <select name="season" id="season" hidden>
               <option value="all">Season: All</option>
               <option value="spring">Spring</option>
               <option value="summer">Summer</option>
               <option value="fall">Fall</option>
             </select>
-            <select id="edible">
+            <select name="edible" id="edible" hidden>
               <option value="all">Type: All</option>
               <option value="edible">Edible</option>
               <option value="toxic">Toxic</option>
@@ -391,6 +391,7 @@
               </div>
             </div>
           </div>
+          <div class="no-matches text-brand" hidden>No Matches Found</div>
         </div>
       </section>
       <!--* FAQ -->
